WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232295
webView.scrollView.indicatorStyle does not work on iOS 15
https://bugs.webkit.org/show_bug.cgi?id=232295
Summary
webView.scrollView.indicatorStyle does not work on iOS 15
Daohan Chong
Reported
2021-10-25 23:21:46 PDT
Created
attachment 442467
[details]
The demo project (please run it using iOS 14 and 15 simulators respectively) Previously, on iOS 14, this kind of code can work perfectly: ```swift override func traitCollectionDidChange(_ previousTraitCollection: UITraitCollection?) { super.traitCollectionDidChange(previousTraitCollection) switch traitCollection.userInterfaceStyle { case .light: webView.scrollView.indicatorStyle = .black case .dark: webView.scrollView.indicatorStyle = .white default: break } } ``` However, after iOS 15, it stopped from working. We cannot find any related documentation about customizing the color of the scroll indicator.
Attachments
The demo project (please run it using iOS 14 and 15 simulators respectively)
(12.32 KB, application/zip)
2021-10-25 23:21 PDT
,
Daohan Chong
no flags
Details
Patch
(12.32 KB, patch)
2021-11-04 17:23 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-10-26 08:30:36 PDT
<
rdar://82816423
>
Devin Rousso
Comment 2
2021-11-04 17:23:31 PDT
Created
attachment 443361
[details]
Patch
EWS
Comment 3
2021-11-08 12:54:17 PST
Committed
r285424
(
243980@main
): <
https://commits.webkit.org/243980@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443361
[details]
.
Florent Morin
Comment 4
2022-07-05 01:03:11 PDT
This fix don't work on iOS when view is not opaque.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug