webView.scrollView.indicatorStyle does not work on iOS 15 https://bugs.webkit.org/show_bug.cgi?id=232295 <rdar://problem/82816423>

Reviewed by Wenson Hsieh.

Source/WebKit:

Keep track of whether the `backgroundColor` and/or `indicatorStyle` of the `WKScrollView`
has been set by the `WKWebView` owner/client. If so, don't allow the `WKWebView` to override
it when it updates. Clients can opt-out of this "override prevention" by setting to `nil`
and `UIScrollViewIndicatorStyleDefault` respectively.

Tests: WKScrollViewTests.IndicatorStyleSetByClient
       WKScrollViewTests.BackgroundColorSetByClient

* UIProcess/ios/WKScrollView.h:
* UIProcess/ios/WKScrollView.mm:
(-[WKScrollView setBackgroundColor:]): Added.
(-[WKScrollView _setBackgroundColorInternal:]): Added.
(-[WKScrollView setIndicatorStyle:]): Added.
(-[WKScrollView _setIndicatorStyleInternal:]): Added.

* UIProcess/API/ios/WKWebViewIOS.h:
* UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _resetCachedScrollViewBackgroundColor]): Added.
(-[WKWebView _updateScrollViewBackground]):
(-[WKWebView _updateScrollViewIndicatorStyle]): Added.
(-[WKWebView _processDidExit]):

Tools:

* TestWebKitAPI/Tests/ios/WKScrollViewTests.mm:
(TEST.WKScrollViewTests.IndicatorStyleSetByClient): Added.
(TEST.WKScrollViewTests.BackgroundColorSetByClient): Added.



Canonical link: https://commits.webkit.org/243980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285424 268f45cc-cd09-0410-ab3c-d52691b4dbfc